snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha256
f711498a886a4782a07511bf4fabc1dee28a5e4f921ab829a68d2db4f8c83231